feat: warn on auth cooldown in admin UI

--- a/static/admin.html
+++ b/static/admin.html
@@ -157,6 +157,10 @@
                         ➕ 添加账号
                     </button>
                 </div>
+                <div id="cookie-expiry-alert" class="hidden px-6 py-3 border-b border-yellow-200 bg-yellow-50 text-yellow-900 text-sm">
+                    <span class="font-semibold">⚠️ Cookie 可能过期：</span>
+                    <span id="cookie-expiry-alert-text"></span>
+                </div>
                 <div class="overflow-x-auto">
                     <table class="min-w-full divide-y divide-gray-200">
                         <thead class="bg-gray-50">
