--- a/static/admin.html
+++ b/static/admin.html
@@ -214,6 +214,19 @@
             <div class="mt-3">
                 <h3 class="text-lg font-semibold text-gray-900 mb-4">添加新账号</h3>
                 <form id="add-account-form" class="space-y-4">
+                    <div class="rounded-md border border-dashed border-gray-300 bg-gray-50 p-3">
+                        <label class="block text-sm font-medium text-gray-700">粘贴插件 JSON</label>
+                        <textarea name="plugin_json" id="plugin-json-input" rows="4"
+                                  placeholder='{"team_id":"...","secure_c_ses":"...","host_c_oses":"...","csesidx":"...","user_agent":"..."}'
+                                  class="mt-2 block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500"></textarea>
+                        <div class="mt-2 flex flex-wrap items-center gap-3 text-xs text-gray-500">
+                            <button type="button" onclick="applyPluginJson()"
+                                    class="bg-gray-900 hover:bg-black text-white px-3 py-1.5 rounded-md text-xs font-medium">
+                                解析并填充
+                            </button>
+                            <span id="cookie-expiry-preview" class="text-gray-500">预计 cookie 过期时间（12小时）：未计算</span>
+                        </div>
+                    </div>
                     <div>
                         <label class="block text-sm font-medium text-gray-700">邮箱</label>
                         <input type="email" name="email" required
@@ -244,6 +257,8 @@
                         <input type="text" name="user_agent" required
                                class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500">
                     </div>
+                    <input type="hidden" name="expires_at" id="expires-at-input">
+                    <input type="hidden" name="created_at" id="created-at-input">
                     <div class="flex justify-end gap-3 mt-6">
                         <button type="button" onclick="hideAddAccountModal()"
                                 class="bg-gray-300 hover:bg-gray-400 text-gray-800 px-4 py-2 rounded-md">
