chore: bust admin js cache

--- a/static/admin.html
+++ b/static/admin.html
@@ -278,6 +278,6 @@
     <script src="js/api.js"></script>
     <script src="js/sse.js"></script>
     <script src="js/charts.js"></script>
-    <script src="js/admin.js"></script>
+    <script src="js/admin.js?v=20260202-1"></script>
 </body>
 </html>
