feat: show token expiry and clear cooldown

--- a/static/admin.html
+++ b/static/admin.html
@@ -167,7 +167,7 @@
                             <tr>
                                 <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">邮箱</th>
                                 <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">状态</th>
-                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">剩余天数</th>
+                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Token 过期时间</th>
                                 <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">总请求数</th>
                                 <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">失败数</th>
                                 <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">最后使用</th>
@@ -278,6 +278,6 @@
     <script src="js/api.js"></script>
     <script src="js/sse.js"></script>
     <script src="js/charts.js"></script>
-    <script src="js/admin.js?v=20260202-1"></script>
+    <script src="js/admin.js?v=20260202-2"></script>
 </body>
 </html>
