chore: show admin ui version

--- a/static/admin.html
+++ b/static/admin.html
@@ -187,6 +187,7 @@
             <div class="bg-white rounded-lg shadow">
                 <div class="px-6 py-4 border-b border-gray-200 flex justify-between items-center">
                     <h3 class="text-lg font-semibold text-gray-900">实时日志</h3>
+                    <div class="text-xs text-gray-400">Admin UI v20260202-5</div>
                     <div class="flex gap-2">
                         <select id="log-level-filter" onchange="filterLogs()"
                                 class="border border-gray-300 rounded-md px-3 py-1 text-sm">
@@ -278,6 +279,6 @@
     <script src="js/api.js"></script>
     <script src="js/sse.js"></script>
     <script src="js/charts.js"></script>
-    <script src="js/admin.js?v=20260202-4"></script>
+    <script src="js/admin.js?v=20260202-5"></script>
 </body>
 </html>
